--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx watch src/http/server.ts"
+    "dev": "tsx watch src/http/server.ts",
+    "dev:lint": "eslint src --ext .ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@rocketseat/eslint-config": "^2.2.2",
     "@types/node": "^20.11.19",
+    "@typescript-eslint/eslint-plugin": "^7.0.2",
+    "@typescript-eslint/parser": "^7.0.2",
     "prisma": "^5.10.0",
     "tsx": "^4.7.1",
     "typescript": "^5.3.3"
@@ -19,6 +23,7 @@
     "@fastify/cookie": "^9.3.1",
     "@fastify/websocket": "^9.0.0",
     "@prisma/client": "^5.10.0",
+    "eslint": "^8.56.0",
     "fastify": "^4.26.1",
     "ioredis": "^5.3.2",
     "zod": "^3.22.4"
